fix(ResponsiveNavbar.tsx): :bug: Change some css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "register.tsx",
-        "login/page.tsx"
+        "login/page.tsx",
+        "ResponsiveNavbar.tsx"
     ]
 }
