feat(chat): :sparkles: init chat page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "conventionalCommits.scopes": [
         "register.tsx",
         "login/page.tsx",
-        "ResponsiveNavbar.tsx"
+        "ResponsiveNavbar.tsx",
+        "chat"
     ]
 }
