feat(homepage): :sparkles: homepage ja

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "register.tsx",
         "login/page.tsx",
         "ResponsiveNavbar.tsx",
-        "chat"
+        "chat",
+        "homepage"
     ]
 }
