--- a/petpal/package.json
+++ b/petpal/package.json
@@ -22,10 +22,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-stars": "^2.2.4",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "react-stars": "^2.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
