feat(listing): :sparkles:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "login/page.tsx",
         "ResponsiveNavbar.tsx",
         "chat",
-        "homepage"
+        "homepage",
+        "listing"
     ]
 }
