--- a/petpal/package.json
+++ b/petpal/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "cookies-next": "^4.1.1",
+    "framer-motion": "^11.0.12",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
