--- a/petpal/package.json
+++ b/petpal/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "framer-motion": "^11.0.12",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
