--- a/petpal/tsconfig.json
+++ b/petpal/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@app/*": ["./src/app/*"],
+      "whyIAmSoGood":["./src/app/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
