fix(bookingHistory): :art: edit some style

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "ResponsiveNavbar.tsx",
         "chat",
         "homepage",
-        "listing"
+        "listing",
+        "bookingHistory"
     ]
 }
