--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "chat",
         "homepage",
         "listing",
-        "service"
+        "service",
+        "AuthContext.tsx"
     ]
 }
