--- a/petpal/package.json
+++ b/petpal/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.10",
     "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.12",
+    "fs": "^0.0.1-security",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
