--- a/petpal/package.json
+++ b/petpal/package.json
@@ -19,6 +19,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
