--- a/petpal/package.json
+++ b/petpal/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.8.2",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
