feat: fix all chat problem

--- a/petpal/tsconfig.json
+++ b/petpal/tsconfig.json
@@ -20,7 +20,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@app/*": ["./src/app/*"],
-      "whyIAmSoGood":["./src/app/*"],
+      "@root":["./"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
